...
        selectTableViewData()
        
        // Get data from local DB or Server
        listingVM.getDataFromLocalDBOrServer(true)
        
        // add sort button in nav bar
        let sortButton = UIBarButtonItem(title: "Sort", style: .plain, target: self, action: #selector(self.sortButtonTapped))
        navigationItem.rightBarButtonItem  = sortButton
        
        let vals = ["RR","RR","KK"]
        //let vals = [1, 4, 2, 2, 6, 24, 15, 2, 60, 15, 6,50,1]
        let uniqueVals = vals.uniques
        print(uniqueVals)
...
